# bmi-wavewatch3

./: .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CITATION.cff  LICENSE  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  requirements-conda.in  requirements-testing.in  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: black.yml  changelog.yml  docs.yml  flake8.yml  lint.yml  prerelease.yml  release.yml  test.yml
bmi_wavewatch3/: _version.py  bmi.py  cli.py  downloader.py  wavewatch3.py
docs/: conf.py  index.rst  plotting.rst  quickstart.rst  requirements.txt  usage.rst
docs/contributing/: developer_install.rst  environments.rst  index.rst  workflow.rst
docs/source/: conf.py  index.md  index.rst  installation.rst  plotting.md  plotting.rst  quickstart.rst  usage.md  usage.rst
docs/source/api/: .gitignore  index.rst
docs/source/contributing/: workflow.rst
docs/source/install/: basic_install.md  basic_install.rst  environments.md  environments.rst  index.md  index.rst  source_install.md  source_install.rst
news/: 1.feature  10.misc  11.misc  13.bugfix  13.feature  14.bugfix  14.docs  14.misc  15.misc  16.docs  17.docs  17.misc  18.misc  2.misc  3.feature  4.feature  5.feature  6.feature  7.feature  7.feature.1  7.feature.2  7.misc  73.misc  74.docs  8.docs  8.feature  8.feature.1  8.misc  8.misc.1  9.feature
src/bmi_wavewatch3/: __init__.py  bmi.py  cli.py  downloader.py  errors.py  source.py  wavewatch3.py
tests/: test_cli.py  test_url.py  test_wavewatch3.py  url_test.py
wavewatch3/: __init__.py  bmi.py  cli.py  downloader.py  errors.py  source.py  url.py  wavewatch3.py
