[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-wavewatch3"
description = "Fetch WaveWatch3 data."
authors = [
  {email = "mcflugen@gmail.com"},
  {name = "The CSDMS team"}
]
maintainers = [
  {email = "mcflugen@gmail.com"},
  {name = "The CSDMS team"}
]
keywords = [
  "bmi",
  "wavewatch",
  "data",
  "grib",
]
license = {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
  "bmipy",
  "cfgrib",
  "click",
  "dask",
  "matplotlib",
  "rich-click",
  "tomli",
  "tqdm",
  "xarray",
  "ecmwflibs",
]
dynamic = ["readme", "version"]

[project.urls]
homepage = "https://github.com/csdms"
documentation = "https://github.com/csdms/bmi-wave-watch-3/blob/main/README.md"
repository = "https://github.com/csdms/bmi-wave-watch-3"
changelog = "https://github.com/csdms/bmi-wave-watch-3/blob/main/CHANGES.md"

[project.optional-dependencies]
dev = ["nox"]

[project.scripts]
ww3 = "bmi_wavewatch3.cli:ww3"

[tool.conda-lock]
channels = ["conda-forge", "defaults"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]


[tool.setuptools.dynamic]
readme = {file = ["README.md", "AUTHORS.md"]}
version = {attr = "bmi_wavewatch3._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/bmi_wavewatch3", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist", "examples"]
addopts = """
  --ignore setup.py
  --tb native
  --strict
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.towncrier]
directory = "news"
package = "bmi_wavewatch3"
filename = "CHANGES.md"
single_file = true
underlines = ["", "", ""]
start_string = "<!-- towncrier release notes start -->\n"
template = "news/changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/csdms/bmi-wavewatch3/issues/{issue})"
title_format = "## [{version}](https://github.com/csdms/bmi-wavewatch3/tree/{version}) - {project_date}"

type = [
  {name="New Tutorial Notebooks", directory="notebook", showcontent=true},
  {name="New Features", directory="feature", showcontent=true},
  {name="Bug Fixes", directory="bugfix", showcontent=true},
  {name="Documentation Enhancements", directory="docs", showcontent=true},
  {name="Other Changes and Additions", directory="misc", showcontent=true},
]
